apply chain of responsiblities design pattern for functions that run on Request, Response entities, to allow the software to be extendable with multiple functions, also have static functions enabled via feature flagging such as filtering, pagination, search
